<resources>
    <string name="app_name">Spy</string>
    <string name="start_click">KLIKNIJ ABY KONTYNUOWAĆ</string>
    <string name="string_start">Witaj w grze Szpieg</string>
    <string name="string_select_number_of_spies">Wybierz liczbę szpiegów</string>
    <string name="string_name_hint">Wprowadź imię</string>
    <string name="string_proceed">Kontynuuj</string>
    <string name="string_back">Cofnij</string>
    <string name="string_begin_game">Rozpocznij</string>
    <string name="string_set_timer">Ustal czas rundy</string>
    <string name="string_rules_textview">
        W grze biorą udział gracze i szpieg (lub szpiedzy). Zwykli gracze znają wylosowaną lokalizację. Zadaniem szpiega jest odganąć lokalizację. Po rozpoczęciu rozgrywki przekazujcie sobie po kolei telefon, aby dowiedzieć się, jakie role pełnicie. \n \n

        Po wylosowaniu ról zadaniem graczy jest wzajemne zadawanie pytań przez wszystkich uczestników (graczy i szpiegów) dotyczących danego miejsca. Gracze mają w taki sbosób zadawać pytania i odpowiedzi, by szpiedzy nie domyślili się, o jakiej lokalizacji mowa. \n \n

        Po upływie wyznaczonego czasu gracze wyznaczają spośród siebie osoby, które podejrzewają o bycie szpiegiem. Jeżeli szpiedzy zostaną poprawnie wytypowani, przegrywają. Wygrywają wówczas, gdy gracze wskażą przynajmniej jedną osobę, która nie była szpiegiem.
    </string>
    <string name="string_summary">Podsumowanie</string>
    <string name="string_summary_number_of_spies">Liczba szpiegów:</string>
    <string name="string_summary_number_of_players">Liczba graczy:</string>
    <string name="string_summary_chosen_categories">Wybrane kategorie:</string>
    <string name="string_change">Zmień</string>
</resources>