<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/summary_fragment_first_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="24dp"
        app:contentPadding="14dp"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/fragment_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_summary"
            android:gravity="center"
            android:textSize="30dp"/>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="10dp"
        android:id="@+id/summary_fragment_second_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/summary_fragment_first_cardview"
        app:cardElevation="5dp"
        app:cardCornerRadius="24dp"
        app:contentPadding="14dp"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/summary_fragment_linear_layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/summary_fragment_linear_layout_info_first_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:id="@+id/summary_fragmment_textview_number_of_players"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_summary_number_of_players"
                    android:layout_gravity="center"
                    android:textSize="24sp"

                    />
                <TextView
                    android:id="@+id/summary_fragmment_textview_change_number_of_players"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_change"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    android:gravity="end"
                />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/summary_fragment_linear_layout_info_second_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
                android:layout_marginBottom="20dp"
            >
                <TextView
                    android:id="@+id/summary_fragmment_textview_number_of_spies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_summary_number_of_spies"
                    android:layout_gravity="center"
                    android:textSize="24sp"

                    />
                <TextView
                    android:id="@+id/summary_fragmment_textview_change_number_of_spies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_change"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    android:gravity="end"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
             <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/summary_fragment_linear_layout_info_third_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           android:layout_marginBottom="10dp"
            >
                 <TextView
                     android:id="@+id/summary_fragmment_textview_chosen_categories"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/string_summary_chosen_categories"
                     android:layout_gravity="center"
                     android:textSize="24sp"

                     />
                 <TextView
                     android:id="@+id/summary_fragmment_textview_change_chosen_categories"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/string_change"
                     android:textColor="@color/red"
                     android:textSize="24sp"
                     android:gravity="end"
                     />

             </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/summary_fragment_first_cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        >


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:orientation="vertical"
                        android:id="@+id/summary_fragment_linear_layout_content_names"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toBottomOf="@id/players_fragment_cardview"
                        app:layout_constraintBottom_toBottomOf="parent"
                        >



                    </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>